--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,9 @@
+asgiref==3.8.1
 Django==3.2.3
-djangorestframework==3.12.4
 django-cors-headers==3.13.0
+djangorestframework==3.12.4
+python-dotenv==1.0.1
+pytz==2025.2
+psycopg2-binary==2.9.3
+sqlparse==0.5.3
+typing_extensions==4.14.0
